updated script